force-app/main/default/objects/NexusQuoteLineItem__c/NexusQuoteLineItem__c.object-meta.xml
<CustomObject>
    <label>Nexus Quote Line Item</label>
    <nameField>
        <displayFormat>QLI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nexus Quote Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>