force-app/main/default/objects/NexusQuoteLineItem__c/fields/Is_Prorated__c.field-meta.xml
<CustomField>
    <fullName>Is_Prorated__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >TRUE when this line item price has been prorated for the remaining contract term.</description>
    <label>Is Prorated</label>
    <type>Checkbox</type>
</CustomField>