force-app/main/default/objects/NexusQuoteLineItem__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <label>List Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Catalog / pricebook price before any discount.</description>
</CustomField>