force-app/main/default/objects/NexusQuoteLineItem__c/fields/MRR_Contribution__c.field-meta.xml
<CustomField>
    <fullName>MRR_Contribution__c</fullName>
    <description
  >Monthly Recurring Revenue contribution of this line. Recurring-Monthly = NetTotal. Recurring-Annual = NetTotal/12. One-time = 0.</description>
    <formula
  >IF(TEXT(Product_Type__c) = &quot;Recurring&quot;, IF(TEXT(Billing_Frequency__c) = &quot;Annual&quot;, NetTotal__c / 12, NetTotal__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>