force-app/main/default/objects/NexusQuoteLineItem__c/fields/NetTotal__c.field-meta.xml
<CustomField>
    <fullName>NetTotal__c</fullName>
    <label>Net Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description
  >Computed net total for this line: UnitPrice * (1 - Discount/100) * Quantity.</description>
</CustomField>