force-app/main/default/objects/NexusQuoteLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>NexusQuoteLineItems</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>