force-app/main/default/objects/NexusQuoteLineItem__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <description>Nexus CPQ — required field</description>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <type>Text</type>
    <length>255</length>
</CustomField>