force-app/main/default/objects/NexusQuoteLineItem__c/fields/Prorated_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Net_Total__c</fullName>
    <description
  >Net total adjusted for remaining contract term. Populated by ContractAmendmentService. Equals NetTotal__c * proration factor.</description>
    <label>Prorated Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>