force-app/main/default/objects/NexusQuoteLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <description>Nexus CPQ — required field</description>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>