force-app/main/default/objects/NexusQuoteLineItem__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>TALEXO_Quote__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>NexusQuoteLineItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>